[gd_scene load_steps=6 format=3 uid="uid://dlih50kuee1hb"]

[ext_resource type="Script" path="res://Scripts/engine.gd" id="1_6khfe"]
[ext_resource type="AudioStream" uid="uid://da0v0puy6d87g" path="res://Assets/Sounds/Vehicle/engine_1.mp3" id="2_myp8s"]
[ext_resource type="AudioStream" uid="uid://yctp564svipo" path="res://Assets/Sounds/Vehicle/engine_2.mp3" id="3_jav1x"]
[ext_resource type="AudioStream" uid="uid://cvq5453t6i3wk" path="res://Assets/Sounds/Vehicle/gear_shift.mp3" id="3_ox1vs"]
[ext_resource type="AudioStream" uid="uid://ccqhw0xitj1so" path="res://Assets/Sounds/Vehicle/gravel_1.mp3" id="5_830bj"]

[node name="Engine" type="Marker2D"]
script = ExtResource("1_6khfe")

[node name="DefaultEngineSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_myp8s")
autoplay = true

[node name="DefaultEngineSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jav1x")
autoplay = true

[node name="ClutchTimer" type="Timer" parent="."]
one_shot = true

[node name="GearShiftSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ox1vs")
autoplay = true

[node name="RoadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_830bj")
autoplay = true
